# CSC8508-Team-Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CSC8503.docx
Assets/Data/: TestGrid1.txt  TestGrid2.txt  TestGrid3.txt  TestGrid4.txt  TestGrid5.txt  TestGrid6.txt  TestGridtest.txt
Assets/Meshes/: AICloseAttack.anm  AIHitReaction.anm  AIJump.anm  AIJumpAttack.anm  AILeftStrafe.anm  AIMat.mat  AIMesh.msh  AIRightStrafe.anm  AIRun.anm  AIWalking.anm  BackFlip.anm  BigJump.anm  BotCloseAttack.anm  BotHitReaction.anm  BotJump.anm  BotLeftStrafe.anm  BotMidAttack.anm  BotRightStrafe.anm  BotRun.anm  Ch03_Body.mat  Ch24_Body.mat  Ch24_nonPBR.mat  Ch24_nonPBR.msh  Corridor_Wall_Corner_Out_L.msh  Corridor_Wall_Corner_Out_R.msh  HurricaneKick.anm  LeftStrafe.anm  MutantJump.anm  PlayerBackflip.anm  RightStrafe.anm  StandingRun.anm  StandingWalk.anm  ZombiePunching.anm  bot.mat  botWalk.anm  splatIdle.anm  splatPlayer.anm  splatPlayer.mat  splatPlayer.msh  splatPlayer2.mat  (+3 more)
Assets/Shaders/: LoadFrag.glsl  SkFrag.glsl  SkinningVertex.glsl  TexturedFragment.glsl  aimFrag.glsl  aimVert.glsl  charFrag.frag  charVert.vert  chromaticEffectFrag.glsl  chromaticEffectVert.glsl  circle.frag  circle.vert  colourFragment.glsl  particle.vert  pointGeom.glsl  progressFrag.glsl  scene.frag  scene.vert  sceneAlternate.frag  simpleFrag.glsl  simpleVert.glsl  triangle.frag  ui.frag
CSC8503/: BTreeObject.cpp  BTreeObject.h  BasicAI.cpp  BasicAI.h  BossAI.cpp  BossAI.h  CMakeLists.txt  GameEnd.h  GameIntroduction.h  GameLoad.h  GameScreen.h  GameTechRenderer.cpp  GameTechRenderer.h  Gamelock.cpp  Gamelock.h  Gamepad.cpp  Gamepad.h  HierarchicalState.h  IKSystem.cpp  IKSystem.h  IntroScreen.h  Main.cpp  MapNode.cpp  MapNode.h  NetworkPlayer.cpp  NetworkPlayer.h  NetworkedGame.cpp  NetworkedGame.h  PaintClass.cpp  PaintClass.h  PauseScreen.h  PlayerObject.cpp  PlayerObject.h  Projectile.cpp  Projectile.h  Sound.cpp  Sound.h  StateGameObject.cpp  StateGameObject.h  TerrainObject.cpp  (+3 more)
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  Debug.cpp  Debug.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  MapNode.cpp  MapNode.h  NavigationGrid.cpp  NavigationGrid.h  NetworkBase.cpp  NetworkBase.h  NetworkObject.cpp  NetworkObject.h  NetworkState.h  OrientationConstraint.cpp  PhysicsObject.cpp  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  PushdownMachine.cpp  PushdownState.h  QuadTree.h  RenderObject.cpp  RenderObject.h  TerrainObject.cpp  TerrainObject.h
NCLCoreClasses/: Assets.h  CMakeLists.txt  Camera.cpp  Camera.h  Matrix2.h  Matrix4.cpp  Matrix4.h  MeshGeometry.cpp  MeshGeometry.h  Quaternion.cpp  Quaternion.h  RendererBase.cpp  RendererBase.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
OpenGLRendering/: CMakeLists.txt  OGLMesh.cpp  OGLRenderer.cpp  OGLRenderer.h  OGLShader.cpp  OGLTexture.cpp  OGLTexture.h
PS4Rendering/: CMakeLists.txt  FragShader.pssl  PS4Frame.cpp  PS4Frame.h  PS4MemoryAware.cpp  PS4MemoryAware.h  PS4Mesh.cpp  PS4Mesh.h  PS4Renderer.cpp  PS4Renderer.h  PS4Shader.cpp  PS4Shader.h  PS4Texture.cpp  PS4Texture.h  VertexShader.pssl
ReactPhysics3D/include/reactphysics3d/mathematics/: Vector3.h
cmake-3.25.0-windows-x86_64/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
cmake-3.25.0-windows-x86_64/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  else.html  (+87 more)
cmake-3.25.0-windows-x86_64/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
cmake-3.25.0-windows-x86_64/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_TYPE.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INSTALL_MODE.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_LANG_LINKER_LAUNCHER.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CMAKE_PREFIX_PATH.html  CMAKE_TOOLCHAIN_FILE.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  CUDAARCHS.html  CUDACXX.html  CUDAFLAGS.html  CUDAHOSTCXX.html  CXX.html  CXXFLAGS.html  DASHBOARD_TEST_FROM_CTEST.html  DESTDIR.html  (+17 more)
cmake-3.25.0-windows-x86_64/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
cmake-3.25.0-windows-x86_64/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
x64/Debug/: OpenGLRendering.lib
(+1736 files in other folders)
